--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,13 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/app/*": ["./src/app/*"],
+      "@/ui/*": ["./src/components/ui/*"],
+      "@/pages/*": ["./src/components/pages/*"],
+      "@/layout/*": ["./src/components/layout/*"]
     }
   }
 }
