--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@supabase/supabase-js": "^2.55.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
     "next": "15.4.5",
@@ -18,6 +19,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
+    "react-toastify": "^11.0.5",
     "typewriter-effect": "^2.22.0",
     "zod": "^3.24.1"
   },
