--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@next/third-parties": "^15.4.6",
     "@supabase/supabase-js": "^2.55.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
-    "next": "15.4.5",
+    "next": "^15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.54.2",
