--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@next/third-parties": "^15.4.6",
     "@supabase/supabase-js": "^2.55.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
-    "next": "^15.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.4.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
     "react-toastify": "^11.0.5",
